# pandabear

./: .cookiecutter.yaml  .gcloudignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  gcp_package_config.yaml  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: bump_version.yml  bumpversion.yaml  publish-to-pypi.yml  publish_to_pypi.yml  workflow.yml
cloudbuild/: README.md  cloudbuild_publish.yaml  cloudbuild_test.yaml  create_update_build_publish_trigger.sh  create_update_run_tests_build_trigger.sh  delete_build_triggers.sh  publish_build_trigger.yaml  run_tests_build_trigger.yaml
examples/: examples.ipynb  junk.py
scripts/: build_publish_package.sh  run_tests.sh  set_env.sh  tear_down.sh  update_template_components.py
src/pandabear/: README.md  __init__.py  column_checks.py  decorators.py  exceptions.py  index_type.py  model.py  model_components.py  scratch.py  type_checking.py  typehints.py  typing.py  typing_.py  utils.py
tests/: test_BaseConfig.py  test_base.py  test_base_case_failure_dataframe.py  test_base_case_failure_series.py  test_column_checks.py  test_custom_check_dataframe.py  test_custom_checks.py  test_dtypes.py  test_model_components.py  test_optional.py  test_type_checking.py  test_unsupported_types.py  test_validate_columns.py  test_validate_multiindex.py  test_validate_series_coerce.py
