[metadata]
name = pandabear
version = attr: pandabear.__version__
author = Ulf Aslak
author_email = ulf@precisdigital.com
description = An runtime vschema validator for Pandas DataFrames.
long_description = file: ./src/pandabear/README.md
long_description_content_type = text/markdown
url = https://github.com/Precis-Digital/pandabear
classifiers = 
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11

[options]
include_package_data = True
__package_dir = 
	= src
packages = find:
python_requires = >=3.8
install_requires =
	pandas>=1.5.3
	numpy>=1.21.0

[options.packages.find]
where = src

